# llmsJsonRetrieval

./: cleaning_folders.py  firstprototype.py  json_retrieval.py  json_structures.py  llmcall.py  pyproject.toml  validation_structure.py  wgetter.py
