[project]
name = "wgetter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "codetiming>=1.4.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.25.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
